[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "dataSandbox"
version = "0.1.0"
description = "A user-friendly synthetic data generator with automatic topological sorting"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy>=1.20.0",
    "pandas>=1.3.0",
]

[tool.setuptools.packages.find]
where = ["src"]